Test exec changes

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -80,6 +80,10 @@ textarea {
 	padding-left: 10px;
 }
 
+#exec {
+	width: 100%; /* Width container */
+	margin: 0 auto; /* center align */
+}
 #container {
 	width: 1024px; /* Width container */
 	margin: 0 auto; /* center align */
